SERVER-55065: Cover null queries with index where possible