src/mongo/db/query/index_bounds_builder.h
@@ -44,6 +44,9 @@ class CollatorInterface;
  */
 class IndexBoundsBuilder {
 public:
+    static const Interval kUndefinedPointInterval;
+    static const Interval kNullPointInterval;
+
     /**
      * Describes various degrees of precision with which predicates can be evaluated based
      * on the index bounds.
@@ -207,6 +210,12 @@ public:
                                  bool* startKeyInclusive,
                                  BSONObj* endKey,
                                  bool* endKeyInclusive);
+
+    /**
+     * Returns 'true' if the ordered intervals 'oil' represent a strict null equality predicate.
+     * Returns 'false' otherwise.
+     */
+    static bool isNullInterval(const OrderedIntervalList& oil);
 
     /**
      * Appends the startKey and endKey of the given "all values" 'interval' (which is either
