src/mongo/db/query/planner_access.h
@@ -138,10 +138,12 @@ private:
      */
     struct ScanBuildingState {
         ScanBuildingState(MatchExpression* theRoot,
+                          const std::vector<IndexEntry>& indexList,
                           bool inArrayOp,
-                          const std::vector<IndexEntry>& indexList)
+                          bool isCoveredNull = false)
             : root(theRoot),
               inArrayOperator(inArrayOp),
+              isCoveredNullQuery(isCoveredNull),
               indices(indexList),
               currentScan(nullptr),
               curChild(0),
@@ -173,6 +175,9 @@ private:
 
         // Are we inside an array operator such as $elemMatch or $all?
         bool inArrayOperator;
+
+        // Is this a covered null query?
+        bool isCoveredNullQuery;
 
         // A list of relevant indices which 'root' may be tagged to use.
         const std::vector<IndexEntry>& indices;
